--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.11.2"
