Added backend structure & setup sequalize - config, models, controllers, routes and middleware

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,18 @@
 version: '3.8'
 
 services:
-  mysql:
-    image: mysql:8.0
+  mariadb:
+    image: mariadb:10.5
+    ports:
+      - "3306:3306"
+    restart: 'always'
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: mydb
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mariadb-data:/var/lib/mysql
 
   redis:
     image: redis:6-alpine
@@ -23,14 +26,14 @@ services:
     ports:
       - "8000:8000"
     environment:
-      MYSQL_HOST: mysql
+      MYSQL_HOST: mariadb
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: mydb
       REDIS_HOST: redis
       REDIS_PORT: 6379
     depends_on:
-      - mysql
+      - mariadb
       - redis
 
   frontend:
@@ -43,5 +46,5 @@ services:
       - backend
 
 volumes:
-  mysql-data:
+  mariadb-data:
   redis-data:
