--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "mariadb": "^3.4.0",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
