--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   mariadb:
     image: mariadb:10.5
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: mydb
@@ -24,6 +25,8 @@ services:
       - redis-data:/data
 
   backend:
+    image: remr-backend-dev:latest
+    restart: always
     build:
       context: ./backend
       target: development
