Fixed libs folders issues

--- a/libs/Navigation/project.json
+++ b/libs/Navigation/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Navigation",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "lib/Navigation/src",
+  "sourceRoot": "libs/Navigation/src",
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project Navigation --web",
