--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@types/react-big-calendar": "^1.16.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.3",
     "react": "19.0.0",
+    "react-big-calendar": "^1.17.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.11.2"
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-router-dom": "6.11.2",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
