--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@heroicons/react": "^2.2.0",
     "@types/react-big-calendar": "^1.16.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.3",
+    "list": "^2.0.19",
+    "npm": "^11.1.0",
     "react": "19.0.0",
     "react-big-calendar": "^1.17.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
